minikube/monitoring/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: veidemann.local
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: http
        path: /grafana(/|$)(.*)
