minikube/monitoring/ingress-prometheus-k8s.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: k8s
  namespace: monitoring
spec:
  rules:
  - host: veidemann.local
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: web
        path: /prometheus(/|$)(.*)
